--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
   <div id="main">
-    <div id="logo"><h1>Johnathan Corbin</h1>
-      <h2>B.S. Aerospace Engineering 2020</h2>
+    <div id="logo"><h1>Gabe Deplazes</h1>
+      <h2>"I can eat two weiners" - Kony 2020</h2>
       </div>
     <div id="menu">
       <ul>
