--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               if (!when) {
                 when = event.start.date;
               }
-              <!--appendPre(event.summary + ' (' + when + ')')-->
+              appendPre(event.summary + ' (' + when + ')')
 		appendPre(event.summary)
             }
           } else {
