--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <script type="text/javascript">
       // Client ID and API key from the Developer Console
-var CLIENT_ID = '989523373178-kkhb6jropm270d0995i47q5so9fkjvei.apps.googleusercontent.com';
-        var API_KEY = 'AIzaSyDAxkRWpc-tm1UM3ne38Py0lveZch3y4BE';
+var CLIENT_ID = '';
+        var API_KEY = '';
 
       // Array of API discovery doc URLs for APIs used by the quickstart
       var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"];
