--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
     </div>
     <div id="footer">
-      Copyright &copy; 2017 Johnathan Corbin | <a href="#">corbin8@outlook.com</a> 
+      Johnathan Corbin 2018 | <a href="#">corbij@rpi.edu</a> 
     </div>
   </div>
 </body>
