--- a/index.html
+++ b/index.html
@@ -14,6 +14,32 @@
 </head>
 
 <body>
+    <SCRIPT>
+function passWord() {
+var testV = 1;
+var pass1 = prompt('Please Enter Your Password',' ');
+while (testV < 3) {
+if (!pass1)
+history.go(-1);
+if (pass1.toLowerCase() == "Lynn") {
+alert('Correct password');
+    window.open('https://j-corbin.github.io/');
+break;
+}
+testV+=1;
+var pass1 =
+prompt('Access Denied - Password Incorrect, Please Try Again.','Password');
+}
+if (pass1.toLowerCase()!="password" & testV ==3)
+history.go(-1);
+return " ";
+}
+    </SCRIPT>
+    <CENTER>
+        <FORM>
+            <input type="button" value="Enter Protected Area" onClick="passWord()">
+        </FORM>
+    </CENTER>
   <div id="main">
     <div id="logo"><h1 />
       <h2 />
