--- a/Pictures.html
+++ b/Pictures.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Operation Gabe - Pictures</title>
+    <title>Becca's Surprise - Home</title>
     <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
 
     <!-- **** layout stylesheet **** -->
