--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Johnathan Corbin - Portfolio</title>
+  <title>Becca's Surprise</title>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
 
   <!-- **** layout stylesheet **** -->
@@ -21,9 +21,9 @@ var pass1 = prompt('Please Enter Your Password',' ');
 while (testV < 3) {
 if (!pass1)
 history.go(-1);
-if (pass1.toLowerCase() == "lynn") {
+if (pass1.toLowerCase() == "Lynn") {
 alert('Correct password');
-window.open('https://j-corbin.github.io/');
+window.open('https://j-corbin.github.io/home');
 break;
 }
 testV+=1;
@@ -37,7 +37,7 @@ return " ";
     </SCRIPT>
     <CENTER>
         <FORM>
-            <input type="button" value="Enter Protected Area" onClick="passWord()">
+            <input type="button" value="Enter Website" onClick="passWord()">
         </FORM>
     </CENTER>
 </body>
