--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@ return " ";
     </SCRIPT>
     <CENTER>
         <FORM>
+            <div style="width:100%;height:100%;position:absolute;vertical-align:middle;text-align:center;">
             <input type="button" value="Enter Website" onClick="passWord()">
+                </div>
         </FORM>
     </CENTER>
 </body>
