--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ var pass1 = prompt('Please Enter Your Password',' ');
 while (testV < 3) {
 if (!pass1)
 history.go(-1);
-if (pass1.toLowerCase() == "Lynn") {
+if (pass1.toLowerCase() == "lynn") {
 alert('Correct password');
 window.open('https://j-corbin.github.io/home');
 break;
