Update to the website

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 					<p>Hey friend, if you're reading this it's probably somewhere near your birthday. So, surprise! I told you I would deliver something unique.</p>
                     <p>There's a lot here (depending on how much I finish.) I'll let you explore the sections at your own pace. Make sure to read through everything.</p>
                     <p>Keep in mind how important you are to me, life wouldn't be the same without you.</p>
+                    <p>Some of the stuff here isn't as well defined or elegant as I would like. I feel like a lot of it is me rambling on. I'm just super anxious to get this to you. I hope it makes you smile and makes your day a little better and that that will hopefully make you overlook some of the website's shortcomings.</p>
 				</div>
 			</div>
 		</div>
