--- a/surprise.html
+++ b/surprise.html
@@ -47,7 +47,7 @@
 						<div>
 							<h1>Your Impact</h1>
 							<p>This section is a bit harder to write. I'm going to do my best to try and explain the impact that you've had on my life and how I wouldn't be where I am or who I am without you.</p>
-							<a href="blogsinglepost.html" class="more">keep Reading</a>
+							<a href="impact.html" class="more">keep Reading</a>
 						</div>
 					</li>
 					<li>
@@ -55,7 +55,7 @@
 						<div>
 							<h1>Qualities</h1>
 							<p>Here I'm going to list off some of your qualities that I love and that I wish more people would see in you.</p>
-							<a href="blogsinglepost.html" class="more">keep Reading</a>
+							<a href="qualities.html" class="more">keep Reading</a>
 						</div>
 					</li>
 					<li>
@@ -63,7 +63,7 @@
 						<div>
 							<h1>Quotes</h1>
 							<p>I've been collecting quotes that I really like for a while now. Here's a few of my favorites that you might like.</p>
-							<a href="blogsinglepost.html" class="more">Keep Reading</a>
+							<a href="quotes.html" class="more">Keep Reading</a>
 						</div>
 					</li>
 				</ul>
