--- a/photos.html
+++ b/photos.html
@@ -33,21 +33,21 @@
         <div id="body" class="running">
             <div>
                 <h1>A collection of some of my favorite photos</h1>
-                <h2><img src="images/image5.jpg" alt="" /></h2>
+                <h2><img src="images/image1.JPG" alt="" /></h2>
                 <p>This is crazy good. You took this? Damn.</p>
                 <p>Is that legitimate fog obscuring the top of the suspension supports? It gives it a really cool look. The black and white helps too. I really love this picture. I'm kinda surprised at how few people there are. That combined with the black and white gives it a kinda peaceful quality that I really like.</p>
 
                 <h1></h1>
-                <h2><img src="images/image2.jpg" alt="" /></h2>
+                <h2><img src="images/image2.JPG" alt="" /></h2>
                 <p>Becca, you're absolutely stunning.</p>
                 <p>You're so much more than just looks Becca and it's rare for someone to have killer looks and a brain to match. Yet here you are with both. You look amazing in this photo and I love the level of confidence you're giving off. You could do anything with confidence like that.</p>
 
                 <h1></h1>
-                <h2><img src="images/image3.jpg" alt="" /></h2>
+                <h2><img src="images/image3.JPG" alt="" /></h2>
                 <p>You took this at Yellowstone, right? It legitimately looks like it could used as a tourist poster for Yellowstone. I love that you stop and take pictures of things in these places that I would just glance over. It really makes me stop and think about where you are when you take these photos and what must be going through your mind. I think you take incredible photos and it's awesome that you have all these memories to look back on. I definitely want to be there with you when you make some more memories at places like this.</p>
 
                 <h1></h1>
-                <h2><img src="images/image4.jpg" alt="" /></h2>
+                <h2><img src="images/image4.JPG" alt="" /></h2>
                 <p>Hmmm, where's this one? Glacier? I like this one for a lot of the same reasons why I liked the previous one. Your ability to stop, appreciate, and then capture these scenic moments is inspiring. It makes me want to go to these places and experience them all for myself.</p>
 
                 <h1></h1>
