--- a/photos.html
+++ b/photos.html
@@ -33,6 +33,7 @@
         <div id="body" class="running">
             <div>
                 <h1>A collection of some of my favorite photos</h1>
+                <p>TESTING</p>
                 <h2><img src="images/image1.JPG" alt="" /></h2>
                 <p>This is crazy good. You took this? Damn.</p>
                 <p>Is that legitimate fog obscuring the top of the suspension supports? It gives it a really cool look. The black and white helps too. I really love this picture. I'm kinda surprised at how few people there are. That combined with the black and white gives it a kinda peaceful quality that I really like.</p>
