--- a/photos.html
+++ b/photos.html
@@ -65,7 +65,7 @@
                 <p>For a while freshman year I was really worried about you. Everything that was going on with Robby and all that. You never seemed truly happy and it bothered me that I couldn't help more. That's why I like seeing pictures of you and everyone from your sorority. I think you've finally found a place you belong and a whole new family to be with. That makes me really glad. It's really reassuring to know that now you have all these amazing people in your life that can be there for you when I can't. I'm really glad that you have all them and I'm sure they're glad to have you too.</p>
 
                 <h1></h1>
-                <h2><img src="images/image8.jpg" alt="" /></h2>
+                <h2><img src="images/image8.JPG" alt="" /></h2>
                 <p>I like this one because you appear genuinely happy. That's not something I got to see from you a lot when we were in high school. (I blame Robby for a lot of that.) We haven't seen each other much lately, so it really brightens my day everytime I see photos like this where you appear genuinely happy. It makes me happy that you're happy and I hope that's a feeling that you get to experience a lot more than you have in the past.</p>
 
                 <h1></h1>
