--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                 <p><a href="#" class="scroll">I'm from Montana</a></p>
-                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Aerospace Engineer</h1>
+                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">An Aerospace Engineer</h1>
               </div>
             </div>
           </div>
@@ -115,8 +115,8 @@
                     <li><a href="#"><span class="icon-instagram"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
-                  <p>Email: <a href="#">beckham@email</a></p>
-                  <p>Phone: <a href="#">(123)-456-789</a></p>
+                  <p>Email: <a href="#">corbij@rpi.edu</a></p>
+                  <p>Phone: <a href="#">(406)-490-2169</a></p>
                 </div>
               </div>
             </div>
