--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <h1 class="bold-text">About</h1>
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Johnathan Corbin</h2>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
+                  <p>I moved across the country when I was 18 to pursue Aerospace Engineering in hopes of one day helping send humanity to distant planets. Here are some of the things I've done since then.</p>
                   <p><a href="#">Checkout my resume</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="#"><span class="icon-twitter"></span></a></li>
