--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   <p>I moved across the country when I was 18 to pursue Aerospace Engineering in hopes of one day helping send humanity to distant planets. Here are some of the things I've done since then.</p>
                   <p><a href="#">Checkout my resume</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
-                    <li><a href="#"><span class="icon-twitter"></span></a></li>
+                    <li><a href="Resume.pdf"><span class="icon-twitter"></span></a></li>
                     <li><a href="#"><span class="icon-facebook"></span></a></li>
                     <li><a href="#"><span class="icon-instagram"></span></a></li>
                   </ul>
