--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
               <h1 class="mb-4"><a href="index.html" class="logo">Johnathan Corbin</a></h1>
               <ul>
                 <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="services.html"><span><small>03</small>Services</span></a></li>
+                <li><a href="resume.html"><span><small>02</small>Resume</span></a></li>
+                <li><a href="skills.html"><span><small>03</small>Skills</span></a></li>
                 <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
                 <li><a href="contact.html"><span><small>06</small>Contact</span></a></li>
               </ul>
             </div>
@@ -108,11 +107,8 @@
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Johnathan Corbin</h2>
                   <p>I moved across the country when I was 18 to pursue Aerospace Engineering in hopes of one day helping send humanity to distant planets. Here are some of the things I've done since then.</p>
-                  <p><a href="#">Checkout my resume</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
-                    <li><a href="Resume.pdf"><span class="icon-twitter"></span></a></li>
-                    <li><a href="#"><span class="icon-facebook"></span></a></li>
-                    <li><a href="#"><span class="icon-instagram"></span></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCkKEnkHXQA3vtgzUcRsF-bQ"><span class="icon-youtube"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
                   <p>Email: <a href="#">corbij@rpi.edu</a></p>
@@ -128,38 +124,37 @@
         <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
-              <span>What i do</span>
-              <h2>My services</h2>
+              <h2><span>What I Do</span></h2>
             </div>
           </div>
           <div class="row">
             <div class="col-md-4 d-flex align-self-stretch ftco-animate">
               <div class="media block-6 services p-3 py-4 d-block text-center">
-                <div class="icon mb-3"><span class="icon-layers"></span></div>
+                  <h3 class="heading">School</h3>
+                  <div class="icon mb-3"><span class="icon-layers"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">UI/UX Design</h3>
-                  <h3 class="heading">Mobile App Design</h3>
-                  <h3 class="heading">Responsive Design</h3>
+                  <h3 class="heading">Rensselaer Polytechnic Institute</h3>
+                  <h3 class="heading">B.S. Aeronautical Engineering 2020</h3>
                 </div>
               </div>      
             </div>
             <div class="col-md-4 d-flex align-self-stretch ftco-animate">
               <div class="media block-6 services p-3 py-4 d-block text-center">
-                <div class="icon mb-3"><span class="icon-gears"></span></div>
+                  <h3 class="heading">Engineering</h3>
+                  <div class="icon mb-3"><span class="icon-gears"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">Product Strategy</h3>
-                  <h3 class="heading">Design Sprints</h3>
-                  <h3 class="heading">UX Strategy</h3>
+                  <h3 class="heading">Undergraduate Research Assistant</h3>
+                  <h3 class="heading">Analysis, Design, Manufacturing</h3>
                 </div>
               </div>      
             </div>
             <div class="col-md-4 d-flex align-self-stretch ftco-animate">
               <div class="media block-6 services p-3 py-4 d-block text-center">
-                <div class="icon mb-3"><span class="icon-code"></span></div>
+                  <h3 class="heading">Coding</h3>
+                  <div class="icon mb-3"><span class="icon-code"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">HTML/CSS</h3>
-                  <h3 class="heading">Prototyping</h3>
-                  <h3 class="heading">User Testing</h3>
+                  <h3 class="heading">Matlab</h3>
+                  <h3 class="heading">Micro-controllers</h3>
                 </div>
               </div>    
             </div>
@@ -172,7 +167,7 @@
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>Portfolio</span>
-              <h2>Checkout a few of my works</h2>
+              <h2>Checkout some of my projects</h2>
             </div>
           </div>
           <div class="row no-gutters">
@@ -183,9 +178,9 @@
               </div>
             </a>
             <div class="text">
-              <h4 class="subheading">Illustration</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
+              <h4 class="subheading">Engineering Design Projects</h4>
+              <h2 class="heading"><a href="portfolio-single.html">An autonomous floor scrubbing robot</a></h2>
+              <p>Freshman year, my design group and I set out to create an autonomous floor scrubbing robot. The robot had a self-contained fluid reservoir and a scrubber to clean hard floors.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
@@ -196,22 +191,22 @@
               </div>
             </a>
             <div class="text order-1">
-              <h4 class="subheading">Application</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
+              <h4 class="subheading">Drones</h4>
+              <h2 class="heading"><a href="portfoli-singleo.html">Building and racing drones</a></h2>
+              <p>Building, racing, and filming with drones is a major hobby of mine. I built the drone pictured to the right. I frequently participate in races and have reached speeds over 60 MPH.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-3.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-3.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text">
-              <h4 class="subheading">Web Design</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
+              <h4 class="subheading">Matlab</h4>
+              <h2 class="heading"><a href="portfolio-single.html">Collection of scripts</a></h2>
+              <p>Matlab is the programming language I have the highest knowledge of. I've done things from simulating flow over rotating cylinders, utilizing vortex panel method analysis for wings, to building Simulink diagrams to run micro-controllers.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
@@ -222,9 +217,9 @@
               </div>
             </a>
             <div class="text order-1">
-              <h4 class="subheading">Application</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
+              <h4 class="subheading">IoT Rover</h4>
+              <h2 class="heading"><a href="portfoli-singleo.html">Wireless control, anywhere</a></h2>
+              <p>The IoT Rover is my current project. It runs off a Raspberry Pi with a webcam. Live video is streamed to a server where the user has realtime control over the rover's position.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
@@ -235,22 +230,9 @@
               </div>
             </a>
             <div class="text">
-              <h4 class="subheading">Animation</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="#">View Project</a></p>
-            </div>
-          </div>
-          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-6.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-              <div class="icon d-flex text-center justify-content-center align-items-center">
-                <span class="icon-search"></span>
-              </div>
-            </a>
-            <div class="text order-1">
-              <h4 class="subheading">Branding</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
+              <h4 class="subheading">Rock Raiders</h4>
+              <h2 class="heading"><a href="portfoli-singleo.html">Building a rover prototype</a></h2>
+              <p>Rock Raiders is a team I'm on that's aiming to compete in the University Rover Challenge. I mainly work on the mechanical engineering aspects and am responsible for helping design and build the chassis pictured here.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
@@ -258,6 +240,7 @@
         </div>
       </section>
 
+        <!--
       <section class="ftco-section ftco-counter" id="section-counter">
         <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
@@ -298,21 +281,20 @@
           </div>
         </div>
       </section>
-      
+      -->
+
       <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCkKEnkHXQA3vtgzUcRsF-bQ"><span class="icon-youtube"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">info@email.com</a></p>
+                <h2 class="mb-3">Contact Me</h2>
+                <p class="h3 email"><a href="#">corbij@rpi.edu</a></p>
               </div>
             </div>
           </div>
