--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Beckham - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Johnathan Corbin</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -47,7 +47,7 @@
                 <li><a href="resume.html"><span><small>02</small>Resume</span></a></li>
                 <li><a href="skills.html"><span><small>03</small>Skills</span></a></li>
                 <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li class="active"><a href="contact.html"><span><small>06</small>Contact</span></a></li>
+                <li class="active"><a href="contact.html"><span><small>05</small>Contact</span></a></li>
               </ul>
             </div>
           </div>
