--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Beckham - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Johnathan Corbin</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -41,13 +41,12 @@
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="index.html" class="logo">Beckham Muff</a></h1>
+              <h1 class="mb-4"><a href="index.html" class="logo">Johnathan Corbin</a></h1>
               <ul>
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li class="active"><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="services.html"><span><small>03</small>Services</span></a></li>
+                <li class="active"><a href="resume.html"><span><small>02</small>Resume</span></a></li>
+                <li><a href="skills.html"><span><small>03</small>Skills</span></a></li>
                 <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
                 <li><a href="contact.html"><span><small>06</small>Contact</span></a></li>
               </ul>
             </div>
@@ -62,7 +61,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Beckham Muff</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Johnathan Corbin</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -70,46 +69,38 @@
         </div>
       </header>
 
-      <section class="ftco-section about-section">
-        <div class="container">
-          <div class="row d-flex my-5" data-scrollax-parent="true">
-            <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
-            <div class="col-md-2"></div>
-            <div class="col-md-6 wrap ftco-animate">
-              <div class="about-desc">
-                <h1 class="bold-text">About</h1>
-                <div class="p-5">
-                  <h2 class="mb-5">Hi! I'm Beckham Muff</h2>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
-                  <p><a href="#">Checkout my resume</a></p>
-                  <ul class="ftco-footer-social list-unstyled mt-4">
-                    <li><a href="#"><span class="icon-twitter"></span></a></li>
-                    <li><a href="#"><span class="icon-facebook"></span></a></li>
-                    <li><a href="#"><span class="icon-instagram"></span></a></li>
-                  </ul>
-                  <h5>Contact me here!</h5>
-                  <p>Email: <a href="#">beckham@email</a></p>
-                  <p>Phone: <a href="#">(123)-456-789</a></p>
+        <section class="ftco-section about-section">
+            <div class="container">
+                <div class="row d-flex" data-scrollax-parent="true">
+                    <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-6 wrap ftco-animate">
+                        <div class="about-desc">
+                            <h1 class="bold-text">About</h1>
+                            <div class="p-5">
+                                <h2 class="mb-5">Hi! I'm Johnathan Corbin</h2>
+                                <p>I moved across the country when I was 18 to pursue Aerospace Engineering in hopes of one day helping send humanity to distant planets. Here are some of the things I've done since then.</p>
+                                <ul class="ftco-footer-social list-unstyled mt-4">
+                                    <li><a href="https://www.youtube.com/channel/UCkKEnkHXQA3vtgzUcRsF-bQ"><span class="icon-youtube"></span></a></li>
+                                </ul>
+                                <h5>Contact me here!</h5>
+                                <p>Email: <a href="#">corbij@rpi.edu</a></p>
+                                <p>Phone: <a href="#">(406)-490-2169</a></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
-          </div>
           <div class="row d-flex justify-content-end mt-5">
           	<div class="col-md-10">
           		<div class="profile ftco-animate">
 	          		<h2 class="mb-4">Profile</h2>
-	          		<h4 class="mb-4">I'm a UI/UX Designer &amp; Frontend Developer from London, UK. I aim to make a difference through my creative solution.</h4>
+	          		<h4 class="mb-4">I'm an aerospace engineer from Butte, Montana. My goal is to aid in revolutionizing space travel to help humanity colonize space.</h4>
 	          		<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 	          		<div class="row my-5">
 		          		<div class="col-md-6">
-		          			<p><strong>Name:</strong> <span>Beckham Muff</span></p>
-		          			<p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p>
-		          			<p><strong>Phone:</strong> <span>(123)-456-789</span></p>
-		          		</div>
-		          		<div class="col-md-6">
-		          			<p><strong>Name:</strong> <span>Beckham Muff</span></p>
-		          			<p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p>
-		          			<p><strong>Phone:</strong> <span>(123)-456-789</span></p>
+		          			<p><strong>Name:</strong> <span>Johnathan Corbin</span></p>
+		          			<p><strong>Address:</strong> <span>1999 Burdett Ave., Polytech 304, Troy, NY 12180</span></p>
+		          			<p><strong>Phone:</strong> <span>(406)-490-2169</span></p>
 		          		</div>
 	          		</div>
           		</div>
@@ -118,24 +109,24 @@
           			<h2 class="mb-4">Experience</h2>
           			<div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>UX &amp; Interaction Designer <span> - Google Company</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
+	          				<h4>Data Conversion Specialist (Internship) <span> - Synesis7</span> </h4>
+	          				<p class="location">Butte, MT - United States</p>
           				</div>
           				<div class="year">
-          					<p>2017 - Present</p>
+          					<p>Summer 2017 &amp; Summer 2018</p>
           				</div>
           			</div>
 
           			<div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>UX &amp; UI Designer <span> - QBootstrap.com</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
+	          				<h4>Undergraduate Research Assistant <span> - Center for Automotion Technologies and Systems</span> </h4>
+	          				<p class="location">Troy, NY - United States</p>
           				</div>
           				<div class="year">
-          					<p>2015 - 2017</p>
+          					<p>2017 - Present</p>
           				</div>
           			</div>
-
+                      <!--
           			<div class="exp-wrap py-4">
           				<div class="desc">
 	          				<h4>Designer &amp; Developer <span> - Themeforest.net</span> </h4>
@@ -155,41 +146,33 @@
           					<p>2012 - 2014</p>
           				</div>
           			</div>
+                          -->
           		</div>
 
 
           		<div class="exp mt-5 ftco-animate">
           			<h2 class="mb-4">Education</h2>
+
           			<div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>Master Degree in Computer Science<span> - Harvard University</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
+	          				<h4>Bacheclor of Science in Aerospace Engineering<span> - Rensselaer Polytechnic Institute</span> </h4>
+	          				<p class="location">Troy, NY - United States</p>
           				</div>
           				<div class="year">
-          					<p>2013 - 2014</p>
+          					<p>2016 - Present</p>
           				</div>
           			</div>
 
           			<div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>Bacheclor of Science in Computer Science<span> - Harvard University</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
+	          				<h4>High School Diploma<span> - Butte High School</span> </h4>
+	          				<p class="location">Butte, MT - United States</p>
           				</div>
           				<div class="year">
-          					<p>2009 - 2012</p>
+          					<p>2012 - 2016</p>
           				</div>
           			</div>
-
-          			<div class="exp-wrap py-4">
-          				<div class="desc">
-	          				<h4>Diploma in Information Technology<span> - Oxford University</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
-          				</div>
-          				<div class="year">
-          					<p>2008 - 2010</p>
-          				</div>
-          			</div>
-
+                      <!--
           			<div class="exp-wrap py-4">
           				<div class="desc">
 	          				<h4>Front-End Developer <span> - Big Comany</span> </h4>
@@ -199,6 +182,7 @@
           					<p>2012 - 2014</p>
           				</div>
           			</div>
+                          -->
           		</div>
           	</div>
           </div>
@@ -208,7 +192,7 @@
           	</div>
           	<div class="col-md-6 animate-box">
 								<div class="progress-wrap">
-									<h4>Photoshop</h4>
+									<h4>Solidworks</h4>
 									<div class="progress">
 									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
 									  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
@@ -219,7 +203,7 @@
 							</div>
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 								<div class="progress-wrap">
-									<h4>jQuery</h4>
+									<h4>Matlab</h4>
 									<div class="progress">
 									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
 									  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
@@ -230,7 +214,7 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap">
-									<h4>HTML5</h4>
+									<h4>Engineering Analysis</h4>
 									<div class="progress">
 									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
 									  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -241,18 +225,18 @@
 							</div>
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 								<div class="progress-wrap">
-									<h4>CSS3</h4>
+									<h4>Machining and Manufacturing</h4>
 									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-									    <span>90%</span>
+									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="65"
+									  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
+									    <span>65%</span>
 									  	</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap">
-									<h4>WordPress</h4>
+									<h4>3D Printing</h4>
 									<div class="progress">
 									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="70"
 									  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -263,18 +247,17 @@
 							</div>
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 								<div class="progress-wrap">
-									<h4>SEO</h4>
+									<h4>Circuits/Electronics</h4>
 									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-									    <span>80%</span>
+									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
+									  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
+									    <span>60%</span>
 									  	</div>
 									</div>
 								</div>
 							</div>
           </div>
         </div>
-      </section>
       
       <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
@@ -282,14 +265,12 @@
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCkKEnkHXQA3vtgzUcRsF-bQ"><span class="icon-youtube"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">info@email.com</a></p>
+                <h2 class="mb-3">Contact Me</h2>
+                <p class="h3 email"><a href="#">corbij@rpi.edu</a></p>
               </div>
             </div>
           </div>
@@ -309,8 +290,7 @@
 
       </div>
 
-    </div>
-
+        </div>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
