--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
               <ul>
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li><a href="resume.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="skills.html"><span><small>03</small>Skills</span></a></li>
+                <li><a href="school.html"><span><small>03</small>School</span></a></li>
                 <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
                 <li class="active"><a href="contact.html"><span><small>05</small>Contact</span></a></li>
               </ul>
@@ -122,6 +122,7 @@
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
                     <li><a href="https://www.youtube.com/channel/UCkKEnkHXQA3vtgzUcRsF-bQ"><span class="icon-youtube"></span></a></li>
+                    <li><a href="https://www.linkedin.com/in/johnathan-corbin-058077147/"><span class="icon-linkedin"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
