--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <ul>
                 <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li><a href="resume.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="skills.html"><span><small>03</small>Skills</span></a></li>
+                <li><a href="school.html"><span><small>03</small>School</span></a></li>
                 <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
                 <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
               </ul>
@@ -109,6 +109,7 @@
                   <p>I moved across the country when I was 18 to pursue Aerospace Engineering in hopes of one day helping send humanity to distant planets. Here are some of the things I've done since then.</p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="https://www.youtube.com/channel/UCkKEnkHXQA3vtgzUcRsF-bQ"><span class="icon-youtube"></span></a></li>
+                      <li><a href="https://www.linkedin.com/in/johnathan-corbin-058077147/"><span class="icon-linkedin"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
                   <p>Email: <a href="#">corbij@rpi.edu</a></p>
@@ -144,7 +145,9 @@
                   <div class="icon mb-3"><span class="icon-gears"></span></div>
                 <div class="media-body">
                   <h3 class="heading">Undergraduate Research Assistant</h3>
-                  <h3 class="heading">Analysis, Design, Manufacturing</h3>
+                    <h3 class="heading">Design</h3>
+                  <h3 class="heading">Analysis</h3>
+                    <h3 class="heading">Manufacturing</h3>
                 </div>
               </div>      
             </div>
@@ -155,6 +158,8 @@
                 <div class="media-body">
                   <h3 class="heading">Matlab</h3>
                   <h3 class="heading">Micro-controllers</h3>
+                    <h3 class="heading">C++</h3>
+                    <h3 class="heading">Python</h3>
                 </div>
               </div>    
             </div>
@@ -290,6 +295,7 @@
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
                     <li><a href="https://www.youtube.com/channel/UCkKEnkHXQA3vtgzUcRsF-bQ"><span class="icon-youtube"></span></a></li>
+                    <li><a href="https://www.linkedin.com/in/johnathan-corbin-058077147/"><span class="icon-linkedin"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
