--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Beckham - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Johnathan Corbin</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -41,14 +41,13 @@
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="index.html" class="logo">Beckham Muff</a></h1>
+              <h1 class="mb-4"><a href="index.html" class="logo">Johnathan Corbin</a></h1>
               <ul>
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="services.html"><span><small>03</small>Services</span></a></li>
+                <li><a href="resume.html"><span><small>02</small>Resume</span></a></li>
+                <li><a href="school.html"><span><small>03</small>School</span></a></li>
                 <li class="active"><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
-                <li><a href="contact.html"><span><small>06</small>Contact</span></a></li>
+                <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
               </ul>
             </div>
           </div>
@@ -62,7 +61,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Beckham Muff</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Johnathan Corbin</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -79,84 +78,71 @@
             </div>
           </div>
           <div class="row no-gutters">
-	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-	              <div class="icon d-flex text-center justify-content-center align-items-center">
-	                <span class="icon-search"></span>
-	              </div>
-	            </a>
-	            <div class="text">
-	              <h4 class="subheading">Illustration</h4>
-	              <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
-	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-	              <p><a href="#">View Project</a></p>
-	            </div>
-	          </div>
-	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-2.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-	              <div class="icon d-flex text-center justify-content-center align-items-center">
-	                <span class="icon-search"></span>
-	              </div>
-	            </a>
-	            <div class="text order-1">
-	              <h4 class="subheading">Application</h4>
-	              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-	              <p><a href="#">View Project</a></p>
-	            </div>
-	          </div>
-	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-3.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-	              <div class="icon d-flex text-center justify-content-center align-items-center">
-	                <span class="icon-search"></span>
-	              </div>
-	            </a>
-	            <div class="text">
-	              <h4 class="subheading">Web Design</h4>
-	              <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
-	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-	              <p><a href="#">View Project</a></p>
-	            </div>
-	          </div>
-	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-	              <div class="icon d-flex text-center justify-content-center align-items-center">
-	                <span class="icon-search"></span>
-	              </div>
-	            </a>
-	            <div class="text order-1">
-	              <h4 class="subheading">Application</h4>
-	              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-	              <p><a href="#">View Project</a></p>
-	            </div>
-	          </div>
-	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-5.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-	              <div class="icon d-flex text-center justify-content-center align-items-center">
-	                <span class="icon-search"></span>
-	              </div>
-	            </a>
-	            <div class="text">
-	              <h4 class="subheading">Animation</h4>
-	              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-	              <p><a href="#">View Project</a></p>
-	            </div>
-	          </div>
-	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-6.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-	              <div class="icon d-flex text-center justify-content-center align-items-center">
-	                <span class="icon-search"></span>
-	              </div>
-	            </a>
-	            <div class="text order-1">
-	              <h4 class="subheading">Branding</h4>
-	              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-	              <p><a href="#">View Project</a></p>
-	            </div>
-	          </div>
+              <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                  <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+                      <div class="icon d-flex text-center justify-content-center align-items-center">
+                          <span class="icon-search"></span>
+                      </div>
+                  </a>
+                  <div class="text">
+                      <h4 class="subheading">Engineering Design Projects</h4>
+                      <h2 class="heading"><a href="portfolio-single.html">An autonomous floor scrubbing robot</a></h2>
+                      <p>Freshman year, my design group and I set out to create an autonomous floor scrubbing robot. The robot had a self-contained fluid reservoir and a scrubber to clean hard floors.</p>
+                      <p><a href="#">View Project</a></p>
+                  </div>
+              </div>
+              <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                  <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-2.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+                      <div class="icon d-flex text-center justify-content-center align-items-center">
+                          <span class="icon-search"></span>
+                      </div>
+                  </a>
+                  <div class="text order-1">
+                      <h4 class="subheading">Drones</h4>
+                      <h2 class="heading"><a href="portfoli-singleo.html">Building and racing drones</a></h2>
+                      <p>Building, racing, and filming with drones is a major hobby of mine. I built the drone pictured to the right. I frequently participate in races and have reached speeds over 60 MPH.</p>
+                      <p><a href="#">View Project</a></p>
+                  </div>
+              </div>
+              <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                  <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-3.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+                      <div class="icon d-flex text-center justify-content-center align-items-center">
+                          <span class="icon-search"></span>
+                      </div>
+                  </a>
+                  <div class="text">
+                      <h4 class="subheading">Matlab</h4>
+                      <h2 class="heading"><a href="portfolio-single.html">Collection of scripts</a></h2>
+                      <p>Matlab is the programming language I have the highest knowledge of. I've done things from simulating flow over rotating cylinders, utilizing vortex panel method analysis for wings, to building Simulink diagrams to run micro-controllers.</p>
+                      <p><a href="#">View Project</a></p>
+                  </div>
+              </div>
+              <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                  <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+                      <div class="icon d-flex text-center justify-content-center align-items-center">
+                          <span class="icon-search"></span>
+                      </div>
+                  </a>
+                  <div class="text order-1">
+                      <h4 class="subheading">IoT Rover</h4>
+                      <h2 class="heading"><a href="portfoli-singleo.html">Wireless control, anywhere</a></h2>
+                      <p>The IoT Rover is my current project. It runs off a Raspberry Pi with a webcam. Live video is streamed to a server where the user has realtime control over the rover's position.</p>
+                      <p><a href="#">View Project</a></p>
+                  </div>
+              </div>
+              <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                  <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-5.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+                      <div class="icon d-flex text-center justify-content-center align-items-center">
+                          <span class="icon-search"></span>
+                      </div>
+                  </a>
+                  <div class="text">
+                      <h4 class="subheading">Rock Raiders</h4>
+                      <h2 class="heading"><a href="portfoli-singleo.html">Building a rover prototype</a></h2>
+                      <p>Rock Raiders is a team I'm on that's aiming to compete in the University Rover Challenge. I mainly work on the mechanical engineering aspects and am responsible for helping design and build the chassis pictured here.</p>
+                      <p><a href="#">View Project</a></p>
+                  </div>
+              </div>
 	        </div>
 	        <div class="row mt-5">
 	          <div class="col text-center">
@@ -182,14 +168,13 @@
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCkKEnkHXQA3vtgzUcRsF-bQ"><span class="icon-youtube"></span></a></li>
+                    <li><a href="https://www.linkedin.com/in/johnathan-corbin-058077147/"><span class="icon-linkedin"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">info@email.com</a></p>
+                <h2 class="mb-3">Contact Me</h2>
+                <p class="h3 email"><a href="#">corbij@rpi.edu</a></p>
               </div>
             </div>
           </div>
