--- a/school.html
+++ b/school.html
@@ -74,6 +74,8 @@
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>School</span>
               <h2>Rensselaer Polytechnic Institute</h2>
+                <p>The institute was established in 1824 by Stephen van Rensselaer and Amos Eaton for the "application of science to the common purposes of life" and is described as the oldest technological university in the English-speaking world. Numerous American colleges or departments of applied sciences were modeled after Rensselaer. Built on a hillside, RPI's 265-acre campus overlooks the city of Troy and the Hudson River and is a blend of traditional and modern architecture. </p>
+                <p>Today, RPI is organized into six main schools which contain 37 departments, with emphasis on science and technology. It is well recognized for its degree programs in engineering, computing, business and management, information technology, the sciences, design, and liberal arts. RPI's Science MBA, Engineering MBA and Master of Science in Technology Commercialization and Entrepreneurship are identified as highly inventive and innovative by the Peterson's guide. RPI is ranked 49th out of all universities in the United States according to U.S. News & World Report. Rensselaer Polytechnic Institute is also highly recognized internationally for its engineering and computing programs, and has been ranked within the top six universities in the United States for highest median earnings of recent alumni.</p>
             </div>
           </div>
           <div class="ftco-section text-center">
