--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Johnathan Corbin">
       <meta name="description" content="Johnathan Corbin Website">
-      <meta name="keywords" content="Corbin, Aerospace, Engineering, Resume, RPI"
+      <meta name="keywords" content="Corbin, Aerospace, Engineering, Resume, RPI">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
