--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Johnathan Corbin - Test</title>
+    <title>Johnathan Corbin</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Johnathan Corbin">
@@ -174,21 +174,21 @@
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>Portfolio</span>
-              <h2>Checkout some of my projects</h2>
+              <h2>Check out some of my projects</h2>
             </div>
           </div>
           <div class="row no-gutters">
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="project-1.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text">
-              <h4 class="subheading">Engineering Design Projects</h4>
+              <h4 class="subheading">Engineering Design Project</h4>
               <h2 class="heading"><a href="portfolio-single.html">An autonomous floor scrubbing robot</a></h2>
-              <p>Freshman year, my design group and I set out to create an autonomous floor scrubbing robot. The robot had a self-contained fluid reservoir and a scrubber to clean hard floors.</p>
-              <p><a href="#">View Project</a></p>
+              <p>Sophomore year, my design group and I set out to create an autonomous floor scrubbing robot. The robot had a self-contained fluid reservoir and a scrubber to clean hard floors.</p>
+              <p><a href="project-1.html">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
@@ -201,32 +201,6 @@
               <h4 class="subheading">Drones</h4>
               <h2 class="heading"><a href="portfoli-singleo.html">Building and racing drones</a></h2>
               <p>Building, racing, and filming with drones is a major hobby of mine. I built the drone pictured to the right. I frequently participate in races and have reached speeds over 60 MPH.</p>
-              <p><a href="#">View Project</a></p>
-            </div>
-          </div>
-          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-3.png'); " data-scrollax=" properties: { translateY: '-30%'}">
-              <div class="icon d-flex text-center justify-content-center align-items-center">
-                <span class="icon-search"></span>
-              </div>
-            </a>
-            <div class="text">
-              <h4 class="subheading">Matlab</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Collection of scripts</a></h2>
-              <p>Matlab is the programming language I have the highest knowledge of. I've done things from simulating flow over rotating cylinders, utilizing vortex panel method analysis for wings, to building Simulink diagrams to run micro-controllers.</p>
-              <p><a href="#">View Project</a></p>
-            </div>
-          </div>
-          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-              <div class="icon d-flex text-center justify-content-center align-items-center">
-                <span class="icon-search"></span>
-              </div>
-            </a>
-            <div class="text order-1">
-              <h4 class="subheading">IoT Rover</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Wireless control, anywhere</a></h2>
-              <p>The IoT Rover is my current project. It runs off a Raspberry Pi with a webcam. Live video is streamed to a server where the user has realtime control over the rover's position.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
