--- a/portfolio.html
+++ b/portfolio.html
@@ -74,25 +74,25 @@
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>Portfolio</span>
-              <h2>Checkout a few of my works</h2>
+              <h2>Check out a few of my works</h2>
             </div>
           </div>
           <div class="row no-gutters">
               <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                  <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+                  <a href="project-1.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
                       <div class="icon d-flex text-center justify-content-center align-items-center">
                           <span class="icon-search"></span>
                       </div>
                   </a>
                   <div class="text">
-                      <h4 class="subheading">Engineering Design Projects</h4>
+                      <h4 class="subheading">Engineering Design Project</h4>
                       <h2 class="heading"><a href="portfolio-single.html">An autonomous floor scrubbing robot</a></h2>
                       <p>Freshman year, my design group and I set out to create an autonomous floor scrubbing robot. The robot had a self-contained fluid reservoir and a scrubber to clean hard floors.</p>
-                      <p><a href="#">View Project</a></p>
+                      <p><a href="project-1.html">View Project</a></p>
                   </div>
               </div>
               <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                  <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-2.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+                  <a href="project-2.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-2.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
                       <div class="icon d-flex text-center justify-content-center align-items-center">
                           <span class="icon-search"></span>
                       </div>
@@ -101,11 +101,11 @@
                       <h4 class="subheading">Drones</h4>
                       <h2 class="heading"><a href="portfoli-singleo.html">Building and racing drones</a></h2>
                       <p>Building, racing, and filming with drones is a major hobby of mine. I built the drone pictured to the right. I frequently participate in races and have reached speeds over 60 MPH.</p>
-                      <p><a href="#">View Project</a></p>
+                      <p><a href="project-2.html">View Project</a></p>
                   </div>
               </div>
               <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                  <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-3.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+                  <a href="project-3.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-3.png'); " data-scrollax=" properties: { translateY: '-30%'}">
                       <div class="icon d-flex text-center justify-content-center align-items-center">
                           <span class="icon-search"></span>
                       </div>
@@ -114,11 +114,11 @@
                       <h4 class="subheading">Matlab</h4>
                       <h2 class="heading"><a href="portfolio-single.html">Collection of scripts</a></h2>
                       <p>Matlab is the programming language I have the highest knowledge of. I've done things from simulating flow over rotating cylinders, utilizing vortex panel method analysis for wings, to building Simulink diagrams to run micro-controllers.</p>
-                      <p><a href="#">View Project</a></p>
+                      <p><a href="project-3.html">View Project</a></p>
                   </div>
               </div>
               <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                  <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+                  <a href="project-4.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
                       <div class="icon d-flex text-center justify-content-center align-items-center">
                           <span class="icon-search"></span>
                       </div>
@@ -127,11 +127,11 @@
                       <h4 class="subheading">IoT Rover</h4>
                       <h2 class="heading"><a href="portfoli-singleo.html">Wireless control, anywhere</a></h2>
                       <p>The IoT Rover is my current project. It runs off a Raspberry Pi with a webcam. Live video is streamed to a server where the user has realtime control over the rover's position.</p>
-                      <p><a href="#">View Project</a></p>
+                      <p><a href="project-4.html">View Project</a></p>
                   </div>
               </div>
               <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                  <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-5.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+                  <a href="project-5.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-5.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
                       <div class="icon d-flex text-center justify-content-center align-items-center">
                           <span class="icon-search"></span>
                       </div>
@@ -140,7 +140,7 @@
                       <h4 class="subheading">Rock Raiders</h4>
                       <h2 class="heading"><a href="portfoli-singleo.html">Building a rover prototype</a></h2>
                       <p>Rock Raiders is a team I'm on that's aiming to compete in the University Rover Challenge. I mainly work on the mechanical engineering aspects and am responsible for helping design and build the chassis pictured here.</p>
-                      <p><a href="#">View Project</a></p>
+                      <p><a href="project-5.html">View Project</a></p>
                   </div>
               </div>
 	        </div>
@@ -148,13 +148,13 @@
 	          <div class="col text-center">
 	            <div class="block-27">
 	              <ul>
-	                <li><a href="#">&lt;</a></li>
+	                <li><a href="portfolio.html">&lt;</a></li>
 	                <li class="active"><span>1</span></li>
-	                <li><a href="#">2</a></li>
-	                <li><a href="#">3</a></li>
-	                <li><a href="#">4</a></li>
-	                <li><a href="#">5</a></li>
-	                <li><a href="#">&gt;</a></li>
+	                <li><a href="portfolio-2.html">2</a></li>
+	                <li><a href="portfolio-3.html">3</a></li>
+	                <li><a href="portfolio-4.html">4</a></li>
+	                <li><a href="portfolio-5.html">5</a></li>
+	                <li><a href="portfolio-5.html">&gt;</a></li>
 	              </ul>
 	            </div>
 	          </div>
