--- a/school.html
+++ b/school.html
@@ -74,12 +74,30 @@
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>School</span>
               <h2>Rensselaer Polytechnic Institute</h2>
-                <p>The institute was established in 1824 by Stephen van Rensselaer and Amos Eaton for the "application of science to the common purposes of life" and is described as the oldest technological university in the English-speaking world. Numerous American colleges or departments of applied sciences were modeled after Rensselaer. Built on a hillside, RPI's 265-acre campus overlooks the city of Troy and the Hudson River and is a blend of traditional and modern architecture. </p>
+               <!--
+                <p>The institute was established in 1824 by Stephen van Rensselaer and Amos Eaton for the "application of science to the common purposes of life" and is described as the oldest technological university in the English-speaking world. Numerous American colleges or departments of applied sciences were modeled after Rensselaer. Built on a hillside, RPI's 265-acre campus overlooks the city of Troy and the Hudson River and is a blend of traditional and modern architecture. </p>             
                 <p>Today, RPI is organized into six main schools which contain 37 departments, with emphasis on science and technology. It is well recognized for its degree programs in engineering, computing, business and management, information technology, the sciences, design, and liberal arts. RPI's Science MBA, Engineering MBA and Master of Science in Technology Commercialization and Entrepreneurship are identified as highly inventive and innovative by the Peterson's guide. RPI is ranked 49th out of all universities in the United States according to U.S. News & World Report. Rensselaer Polytechnic Institute is also highly recognized internationally for its engineering and computing programs, and has been ranked within the top six universities in the United States for highest median earnings of recent alumni.</p>
+                -->
+                <h3>Bachelors of Science Aeronautical Engineering</h3>
+                <p><strong>Current class:</strong> Junior</p>
+                <p><strong>Current GPA:</strong> 3.63/4.00</p>
+                <p><strong>Expected Graduation Date:</strong> May 2020</p>
+                <p><strong>Concentration:</strong> Space Vehicle Design</p>
+                <p>I've been attending RPI since the summer of 2016. I'm currently a first semester Junior. At RPI, each aeronautical engineering major chooses from one of three major concentrations: fixed wing, rotorcraft, or space vehicle design. My concentration is space vehicle design.</p>
+                <p>A copy of my most recent transcript can be found <a href="Transcript.pdf">here.</a></p>
+                <p>
+                <img src="images/schedule.jpg" alt="" class="img-fluid">
+                    </p>
+                <h3>Coursework</h3>
+                <p>A list of every course I take for my degree is listed above. I'm going to elaborate on several courses here that I feel help me perform better as an aeronautical engineer.</p>
+                    <p><strong>Aerospace Structures and Materials</strong> - Beam structures under combined shear, bending, and torsional loads. Semi-monocoque structures: idealizations involving wings, ribs, and fuselage bulkheads. Effects of taper and cutouts in stiffened shell structures, shear deformations and warping, location of elastic axis in open and closed sections, torsion of multicell sections. Stability of beam and membrane elements. Introduction to materials used in aerospace vehicles including metals, ceramics, and composites with special emphasis on fiber-reinforced composite materials. Methods for material analysis and selection for various aerospace components.</p>
+                    <p><strong>Aerodynamics</strong> - The fundamental principles of fluid dynamics, theory of inviscid incompressible flow, thin airfoils, high aspect ratio wings, delta wings, vortex panel and vortex lattice methods, subsonic compressible small-disturbance theory, transonic flow.</p>
+                    <!--<p><strong>Introduction to Engineering Design</strong> - A first course in engineering design which emphasizes creativity, teamwork, communication, and work across engineering disciplines. Students are introduced to the design process through a semester-long project which provides a design-build-test experience. Oral and written communication are important elements of the course.</p>-->
+                    <p><strong>Spaceflight Mechanics</strong> - Review of basic dynamics. Analysis of spacecraft trajectories, target rendezvous, and interception. Hohmann transfer, escape trajectories, interplanetary missions, the restricted three-body problem. Rigid body dynamics with application to gyrodynamics, stabilized platforms, gravity-gradient and spin stabilization of satellites, gyrostats. Selected topics such as drag-free satellites, vehicle launch and reentry, deployment dynamics (time permitting). MATLAB/Simulink is used as a simulation-visualization aid.</p>
+                    <p><strong>Aeroelasticity and Structural Vibration</strong> - Basic concepts in static and dynamic aeroelasticity. Structural vibrations, free and forced motion of discrete and continuous structures, introduction to modal analysis, and use of materials for dynamics tailoring. Aeroelastic behavior of complex structures, dynamic aeroelasticity. The phenomena of divergence, control surface effectiveness, and flutter and the use of composite materials for aeroelastic tailoring. The role of numerical methods will be emphasized.</p>
+                    <p><strong>Aerospace Structures and Controls Lab</strong> - Laboratory experiments with primary emphasis on lightweight structures, structural dynamics, and control as it applies to aircraft and spacecraft. Experiments include elastic instability, linear and nonlinear structural vibrations, gyrodynamics, spacecraft stability, the role of materials (including composites), etc.</p>
+                    <p><strong>Modeling and Control of Dynamic Systems</strong> - Introduction to modeling, analysis, and control of dynamic systems. Modeling of mechanical, electrical, and electromechanical systems. Time-domain and Laplace-Transform solutions. Block diagrams and transfer functions. Analysis and design of feedback control systems. Control system representation and characteristics. System performance specifications. Absolute stability criteria. Root-Locus and frequency response analysis and design methods. Systems compensation and controller design.</p>
             </div>
-          </div>
-          <div class="ftco-section text-center">
-            <h2>Coursework</h2>
           </div>
         </div>
       </section>
