--- a/resume.html
+++ b/resume.html
@@ -157,7 +157,7 @@
 
           			<div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>Bacheclor of Science in Aerospace Engineering<span> - <a href="https://www.rpi.edu">Rensselaer Polytechnic Institute</a></span> </h4>
+	          				<h4>Bachelor of Science in Aerospace Engineering<span> - <a href="https://www.rpi.edu">Rensselaer Polytechnic Institute</a></span> </h4>
 	          				<p class="location">Troy, NY - United States</p>
           				</div>
           				<div class="year">
