--- a/resume.html
+++ b/resume.html
@@ -101,7 +101,7 @@
 	          		<div class="row my-5">
 		          		<div class="col-md-6">
 		          			<p><strong>Name:</strong> <span>Johnathan Corbin</span></p>
-		          			<p><strong>Address:</strong> <span>1999 Burdett Ave., Polytech 304, Troy, NY 12180</span></p>
+		          			<p><strong>Address:</strong> <span>611 Transit St., Butte, MT 59701</span></p>
 		          			<p><strong>Phone:</strong> <span>(406)-490-2169</span></p>
 		          		</div>
 	          		</div>
