--- a/resume.html
+++ b/resume.html
@@ -96,7 +96,7 @@
           		<div class="profile ftco-animate">
 	          		<h2 class="mb-4">Profile</h2>
 	          		<h4 class="mb-4">I'm an aerospace engineer from Butte, Montana. My goal is to aid in revolutionizing space travel to help humanity colonize space.</h4>
-	          		<p>I am currently pursuing an internship/job in the aerospace field in the United States, public or private sector. I have a deep interest in spaceflight mechanics, space vehicle design, and control systems. I'm currently a Junior at Rensselaer Polytechnic Institue working towards an aerospace engineering degree with a focus in space vehicle design.</p>
+	          		<p>I am currently pursuing an internship/job in the aerospace field in the United States, public or private sector. I have a deep interest in spaceflight mechanics, space vehicle design, and control systems. I'm currently a Senior at Rensselaer Polytechnic Institue working towards an aerospace engineering degree with a focus in space vehicle design.</p>
                       <p>A few of my relevant skills and experiences are listed here. For a more official list, a PDF copy of my current resume can be found <a href="Resume.pdf">here</a>.</p>
 	          		<div class="row my-5">
 		          		<div class="col-md-6">
