--- a/contact.html
+++ b/contact.html
@@ -77,10 +77,10 @@
             </div>
             <div class="w-100"></div>
             <div class="col-md-3">
-              <p><span>Address: </span>1999 Burdett Ave., Polytech 304, Troy, New York 12180</p>
+              <p><span>Address: </span>611 Transit St., Butte, MT 59701</p>
             </div>
             <div class="col-md-3">
-              <p><span>Phone: </span> <a href="tel://14064902169">1-406-490-2169</a></p>
+              <p><span>Phone: </span> <a href="tel://14064902169">(406)-490-2169</a></p>
             </div>
             <div class="col-md-3">
               <p><span>Email: </span> <a href="mailto:corbij@rpi.edu">corbij@rpi.edu</a></p>
@@ -110,7 +110,7 @@
               </form>
             
             </div>
-            <div class="col-md-6" id="map"></div>
+            <!--<div class="col-md-6" id="map"></div>-->
           </div>
         </div>
       </section>
