--- a/school.html
+++ b/school.html
@@ -79,8 +79,8 @@
                 <p>Today, RPI is organized into six main schools which contain 37 departments, with emphasis on science and technology. It is well recognized for its degree programs in engineering, computing, business and management, information technology, the sciences, design, and liberal arts. RPI's Science MBA, Engineering MBA and Master of Science in Technology Commercialization and Entrepreneurship are identified as highly inventive and innovative by the Peterson's guide. RPI is ranked 49th out of all universities in the United States according to U.S. News & World Report. Rensselaer Polytechnic Institute is also highly recognized internationally for its engineering and computing programs, and has been ranked within the top six universities in the United States for highest median earnings of recent alumni.</p>
                 -->
                 <h3>Bachelors of Science Aeronautical Engineering</h3>
-                <p><strong>Current class:</strong> Junior</p>
-                <p><strong>Current GPA:</strong> 3.63/4.00</p>
+                <p><strong>Current class:</strong>Senior</p>
+                <p><strong>Current GPA:</strong> 3.67/4.00</p>
                 <p><strong>Expected Graduation Date:</strong> May 2020</p>
                 <p><strong>Concentration:</strong> Space Vehicle Design</p>
                 <p>I've been attending RPI since the summer of 2016. I'm currently a first semester Junior. At RPI, each aeronautical engineering major chooses from one of three major concentrations: fixed wing, rotorcraft, or space vehicle design. My concentration is space vehicle design.</p>
