Removing extra pages.

--- a/portfolio.html
+++ b/portfolio.html
@@ -111,9 +111,9 @@
                       </div>
                   </a>
                   <div class="text">
-                      <h4 class="subheading">Matlab</h4>
+                      <h4 class="subheading">Angles-Only Orbit Determination</h4>
                       <h2 class="heading"><a href="portfolio-single.html">Collection of scripts</a></h2>
-                      <p>Matlab is the programming language I have the highest knowledge of. I've done things from simulating flow over rotating cylinders, utilizing vortex panel method analysis for wings, to building Simulink diagrams to run micro-controllers.</p>
+                      <p>This project was for my Spaceflight Mechanics class my junior year of undergrad. The project was of my own choosing and explores how to determine the orbits of unknown objects.</p>
                       <p><a href="project-3.html">View Project</a></p>
                   </div>
               </div>
@@ -125,8 +125,8 @@
                   </a>
                   <div class="text order-1">
                       <h4 class="subheading">IoT Rover</h4>
-                      <h2 class="heading"><a href="portfoli-singleo.html">Wireless control, anywhere</a></h2>
-                      <p>The IoT Rover is my current project. It runs off a Raspberry Pi with a webcam. Live video is streamed to a server where the user has realtime control over the rover's position.</p>
+                      <h2 class="heading"><a href="portfoli-singleo.html">Additive Welding</a></h2>
+                      <p>Additive welding was the focus of a research project that I spear-headed between my junior and senior years of undergrad. The focus was to explore the feasibility of 3D printing in molten metal.</p>
                       <p><a href="project-4.html">View Project</a></p>
                   </div>
               </div>
@@ -150,11 +150,13 @@
 	              <ul>
 	                <li><a href="portfolio.html">&lt;</a></li>
 	                <li class="active"><span>1</span></li>
+                      <!--
 	                <li><a href="portfolio-2.html">2</a></li>
 	                <li><a href="portfolio-3.html">3</a></li>
 	                <li><a href="portfolio-4.html">4</a></li>
 	                <li><a href="portfolio-5.html">5</a></li>
 	                <li><a href="portfolio-5.html">&gt;</a></li>
+                          -->
 	              </ul>
 	            </div>
 	          </div>
